[gd_scene load_steps=10 format=3 uid="uid://oul30onpet8k"]

[ext_resource type="Script" path="res://UI/StartMenu/StartMenu.gd" id="1_68qk4"]
[ext_resource type="AudioStream" uid="uid://cdpk0o585okam" path="res://Sound/Music/Title_Theme.wav" id="2_88gkp"]
[ext_resource type="PackedScene" uid="uid://bup6rgp4ye4qm" path="res://UI/StartMenu/start_menu_background.tscn" id="2_453w8"]
[ext_resource type="Script" path="res://UI/StartMenu/StartButtons.gd" id="3_eh1tq"]
[ext_resource type="PackedScene" uid="uid://bk8cbgpvqckhj" path="res://UI/Credits/credits_menu.tscn" id="3_t2tic"]
[ext_resource type="Theme" uid="uid://jy7h66xc0dsf" path="res://UI/game_theme.tres" id="5_dphb4"]
[ext_resource type="Script" path="res://SoundLevelSlider.gd" id="5_g66ge"]

[sub_resource type="InputEventAction" id="InputEventAction_oncw7"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_wtr6k"]
events = [SubResource("InputEventAction_oncw7")]

[node name="Root" type="Node"]

[node name="StartMenu" type="Node" parent="."]
script = ExtResource("1_68qk4")
title_theme = ExtResource("2_88gkp")

[node name="UI_Layer" type="CanvasLayer" parent="StartMenu"]
layer = 3

[node name="Control" type="Control" parent="StartMenu/UI_Layer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartMenuUI" type="MarginContainer" parent="StartMenu/UI_Layer/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_dphb4")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="StartButtons" type="VBoxContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("VBoxContainer/CloseButton")
focus_neighbor_bottom = NodePath("VBoxContainer/StartButton")
focus_mode = 1
script = ExtResource("3_eh1tq")

[node name="Control" type="Control" parent="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="StartButton" type="Button" parent="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
focus_neighbor_top = NodePath("../CloseButton")
text = "start game"

[node name="OptionsButton" type="Button" parent="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons/VBoxContainer"]
layout_mode = 2
text = "options"

[node name="CreditsButton" type="Button" parent="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons/VBoxContainer"]
layout_mode = 2
text = "credits"

[node name="CloseButton" type="Button" parent="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "close"

[node name="CreditsContainer" type="TabContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI"]
unique_name_in_owner = true
visible = false
layout_mode = 2
tab_alignment = 1
tabs_visible = false

[node name="MarginContainer" type="MarginContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI/CreditsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="CreditsMenu" parent="StartMenu/UI_Layer/Control/StartMenuUI/CreditsContainer/MarginContainer" instance=ExtResource("3_t2tic")]
layout_mode = 2
size_flags_horizontal = 1

[node name="CreditsBackButton" type="Button" parent="StartMenu/UI_Layer/Control/StartMenuUI/CreditsContainer/MarginContainer"]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
shortcut = SubResource("Shortcut_wtr6k")
text = "‚óÅ"

[node name="OptionsMenu" type="HBoxContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Control" type="Control" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="MarginContainer" type="MarginContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AudioOptionsTitle" type="Label" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelHeadingL"
text = "Audio"

[node name="MarginContainer" type="MarginContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="MasterSoundLevelLabel" type="Label" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Master"

[node name="[Master]SoundLevelSlider" type="HSlider" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("5_g66ge")

[node name="MusicSoundLevelLabel" type="Label" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "Music"

[node name="[Music]SoundLevelSlider" type="HSlider" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("5_g66ge")

[node name="UISoundLevelLabel" type="Label" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "UI"

[node name="[UI]SoundLevelSlider" type="HSlider" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("5_g66ge")

[node name="SFXSoundLevelLabel" type="Label" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
text = "SFX"

[node name="[SFX]SoundLevelSlider" type="HSlider" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("5_g66ge")

[node name="HSeparator" type="HSeparator" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="GraphicsOptionsTitle" type="Label" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelHeadingL"
text = "Graphics"

[node name="HSeparator2" type="HSeparator" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="GameplayOptionsTitle" type="Label" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelHeadingL"
text = "Gameplay
"

[node name="HSeparator3" type="HSeparator" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ControlsOptionsTitle" type="Label" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu/PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"LabelHeadingL"
text = "Controls"

[node name="Control2" type="Control" parent="StartMenu/UI_Layer/Control/StartMenuUI/OptionsMenu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Background" parent="StartMenu" instance=ExtResource("2_453w8")]
texture_filter = 1

[connection signal="visibility_changed" from="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons" to="StartMenu" method="_on_start_buttons_visibility_changed"]
[connection signal="pressed" from="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons/VBoxContainer/StartButton" to="StartMenu" method="_on_start_button_pressed"]
[connection signal="pressed" from="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons/VBoxContainer/OptionsButton" to="StartMenu" method="_on_options_button_pressed"]
[connection signal="pressed" from="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons/VBoxContainer/CreditsButton" to="StartMenu" method="_on_credits_button_pressed"]
[connection signal="pressed" from="StartMenu/UI_Layer/Control/StartMenuUI/StartButtons/VBoxContainer/CloseButton" to="StartMenu" method="_on_close_button_pressed"]
[connection signal="pressed" from="StartMenu/UI_Layer/Control/StartMenuUI/CreditsContainer/MarginContainer/CreditsBackButton" to="StartMenu" method="_on_credits_back_button_pressed"]
